--- a/src/main/resources/templates/my/info.html
+++ b/src/main/resources/templates/my/info.html
@@ -17,7 +17,7 @@
                 <table border="0">
                     <tr>
                         <td>사용자 ID</td>
-                        <td>chh****</td>
+                        <td class="uid">[[${myMember.uid}]]</td>
                     </tr>
                     <tr>
                         <td>비밀번호</td>
@@ -27,18 +27,18 @@
                     </tr>
                     <tr>
                         <td>이름</td>
-                        <td>김*학</td>
+                        <td class="name">[[${myMember.name}]]</td>
                     </tr>
                     <tr>
                         <td>생년월일</td>
-                        <td>1983년 05월 03일</td>
+                        <td class="birth">[[${myMember.rdate}]]</td>
                     </tr>
                     <tr>
                         <td>E-mail</td>
                         <td>
                             <input type="text" name="email1" value="chakh101">@
                             <input type="text" name="email2" value="naver.com">
-                            <select>
+                            <select class="emailDomain">
                                 <option>직접입력</option>
                                 <option>naver.com</option>
                                 <option>daum.net</option>
@@ -63,11 +63,11 @@
                     <tr>
                         <td>주소</td>
                         <td>
-                            <input type="text" name="zip"/>
-                            <button id="btnFindZip">주소검색</button>
+                            <input type="text" name="zip" th:value="${myMember.zip}"/>
+                            <button id="btnFindZip" type="button" onclick="zipcode()">주소검색</button>
                             <p class="address">
-                                <input type="text" name="addr1"/>
-                                <input type="text" name="addr2"/>
+                                <input type="text" name="addr1" th:value="${myMember.addr1}"/>
+                                <input type="text" name="addr2" th:value="${myMember.addr2}"/>
                             </p>
                         </td>
                     </tr>
@@ -81,5 +81,65 @@
                 <button id="btnInfoChange">수정하기</button>
             </article>
         </section>
+
+        <script>
+            $(function (){
+                const email = '[[${myMember.email}]]';
+                const hp = '[[${myMember.hp}]]';
+                const rdate = $('.birth').text();
+                console.log(rdate);
+
+                // "@" 문자를 기준으로 이메일 주소를 분리
+                const emailParts = email.split('@');
+
+                // "-" 문자를 기준으로 전화번호를 분리
+                const hpParts = hp.split('-');
+
+                // email 데이터 조회
+                if (emailParts.length === 2) {
+                    const email1Input = document.querySelector('input[name="email1"]');
+                    const email2Input = document.querySelector('input[name="email2"]');
+
+                    // 분리된 email를 각각 넣기
+                    email1Input.value = emailParts[0];
+                    email2Input.value = emailParts[1];
+
+                    $('.emailDomain').change(function (){
+
+                        // 현재 선택된 옵션의 값 가져오기
+                        const selectedDomain = this.value;
+
+                        // "직접입력"이 아닌 경우에만 값을 설정
+                        if (selectedDomain !== '직접입력') {
+                            email2Input.value = selectedDomain;
+                        }
+                    });
+                }
+
+                // hp 데이터 조회
+                if (hpParts.length === 3) {
+                    const hp1Input = document.querySelector('input[name="hp1"]');
+                    const hp2Input = document.querySelector('input[name="hp2"]');
+                    const hp3Input = document.querySelector('input[name="hp3"]');
+
+                    hp1Input.value = hpParts[0]; // "010"을 hp1의 value에 설정
+                    hp2Input.value = hpParts[1]; // "1234"을 hp2의 value에 설정
+                    hp3Input.value = hpParts[2]; // "5678"을 hp3의 value에 설정
+                }
+
+                // 년-월-일 형식으로 변환
+                // Date 객체로 변환
+                let originalDate = new Date(rdate);
+
+                // 원하는 날짜 형식으로 변환
+                let formattedDate = originalDate.getFullYear() + "년 " +
+                    (originalDate.getMonth() + 1) + "월 " +
+                    originalDate.getDate() + "일";
+                $('.birth').text(formattedDate);
+
+            });
+        </script>
+        <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+        <script th:src="@{/js/member/zipcode.js}"></script>
     </div>
 </html>
