--- a/src/main/resources/templates/member/registerSeller.html
+++ b/src/main/resources/templates/member/registerSeller.html
@@ -100,6 +100,15 @@
 									<span class="msgEmail"></span>
 								</td>
 							</tr>
+							<tr>
+								<th><span class="essential">*</span>주민번호</th>
+								<td>
+									<input type="text" name="km_ssn1" placeholder="주민번호 앞자리 입력" th:maxlength="6"/> -
+									<input type="text" name="km_ssn2" placeholder="주민번호 뒷자리 입력" th:maxlength="7"/>
+									<input type="hidden" name="ssn">
+									<span class="msgSsh"></span>
+								</td>
+							</tr>
 							<tr class="addr">
 								<th>회사주소</th>
 								<td>
