--- a/src/main/resources/templates/product/complete.html
+++ b/src/main/resources/templates/product/complete.html
@@ -86,7 +86,7 @@
                     </tr>
                     <tr>
                         <td>결제방법</td>
-                        <td>신용카드</td>
+                        <td th:text="${order.ordPaymentName}">신용카드</td>
                     </tr>
                     <tr>
                         <td>주문자/연락처</td>
