--- a/src/main/resources/templates/product/order.html
+++ b/src/main/resources/templates/product/order.html
@@ -24,7 +24,7 @@
             <nav>
                 <h1>주문결제</h1>
                 <p class="orderNav">
-                    HOME > 장바구니 > <strong>주문결제</strong>
+                    장바구니 > <strong>주문결제</strong> > 결제완료
                 </p>
             </nav>
 
