--- a/src/main/resources/templates/product/cart.html
+++ b/src/main/resources/templates/product/cart.html
@@ -31,7 +31,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr class="empty">
+                    <tr class="empty" th:if="${#lists.isEmpty(cartList)}">
                         <td colspan="7">장바구니에 상품이 없습니다.</td>
                     </tr>
                     <tr th:each="cart:${cartList}" th:if="${cart.prodNo.sale > 0}">
@@ -64,9 +64,9 @@
                 <input type="button" name="del" id="del" value="선택삭제">
 
                 <!-- 장바구니 전체합계 -->
-                <div class="total">
+                <div class="total" th:if="${not #lists.isEmpty(cartList)}">
                     <h2>전체합계</h2>
-                    <table border="0">
+                    <table border="0" >
                         <tr>
                             <td>상품수</td>
                             <td id="totalCountAmount">0개</td>
