--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -7,7 +7,7 @@
     </head>
     <section layout:fragment="content" class="list">
             <!-- 제목, 페이지 네비게이션 -->
-            <nav>
+            <nav class="listNav">
                 <h1>상품목록</h1>
                 <p>HOME > <span th:text="${cate eq null ? '전체 상품' : cate.cate1.c1Name + ' > '}"></span><strong th:text="${cate eq null ? ' ' : cate.c2Name}"></strong></p>
             </nav>
