--- a/src/main/resources/templates/my/qna.html
+++ b/src/main/resources/templates/my/qna.html
@@ -26,157 +26,72 @@
                         <th>작성일</th>
                         <th>상태</th>
                     </tr>
-                    <tr>
-                        <td class="no">5</td>
-                        <td class="channel">고객센터</td>
-                        <td class="type">주문/결제</td>
-                        <td class="tit"><a href="#">신용카드 결제 중 오류가 난 경우 어떻게 하나요?</a></td>
-                        <td class="date">2024-12-12</td>
-                        <td class="status"><span class="notAnswerYet">검토중</span></td>
-                    </tr>
-                    <tr>
-                        <td class="no">4</td>
-                        <td class="channel">고객센터</td>
-                        <td class="type">주문/결제</td>
-                        <td class="tit"><a href="#">신용카드 결제 중 오류가 난 경우 어떻게 하나요?</a></td>
-                        <td class="date">2024-12-12</td>
-                        <td class="status"><span class="answered">답변완료</span></td>
-                    </tr>
-                    <tr class="answerRow">
-                        <td colspan="6">
-                            <div class="question">
-                                <p class="tit">
-                                    신용카드 결제 중 오류가 난 경우 어떻게 하나요?
-                                    <span class="date">2022-12-16 10:08:25</span>
-                                </p>
-                                <p class="content">
-                                    결제하다가 오류가 나서 결제가 안됩니다.
-                                </p>
-                            </div>
-                            <div class="answer">
-                                <p class="tit">
-                                    주문/결제 문의 답변입니다.
-                                    <span class="date">2022-12-17 10:08:25</span>
-                                </p>
-                                <p class="content">
-                                    다른 카드로 결제 하세요. 그러면 될거에요.
-                                </p>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="no">3</td>
-                        <td class="channel">판매자게시판</td>
-                        <td class="type">배송</td>
-                        <td class="tit">
-                            <ul>
-                                <li class="prodName"><a href="#">상품명</a></li>
-                                <li class="question"><a href="#">배송기간이 보통 얼마나 걸리나요?</a></li>
-                            </ul>
-                        </td>
-                        <td class="date">2024-12-12</td>
-                        <td class="status"><span class="answered">답변완료</span></td>
-                    </tr>
-                    <tr class="answerRow">
-                        <td colspan="6">
-                            <div class="question">
-                                <p class="tit">
-                                    배송기간이 보통 얼마나 걸리나요?
-                                    <span class="date">2022-12-16 10:08:25</span>
-                                </p>
-                                <p class="content">
-                                    알고싶어요. 알려주세요.
-                                </p>
-                            </div>
-                            <div class="answer">
-                                <p class="tit">
-                                    배송 문의 답변입니다.
-                                    <span class="date">2022-12-17 10:08:25</span>
-                                </p>
-                                <p class="content">
-                                    보통 한달 걸립니다.
-                                </p>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="no">2</td>
-                        <td class="channel">판매자게시판</td>
-                        <td class="type">상품</td>
-                        <td class="tit">
-                            <ul>
-                                <li class="prodName"><a href="#">상품명</a></li>
-                                <li class="question"><a href="#">흰색 상품은 없나요?</a></li>
-                            </ul>
-                        </td>
-                        <td class="date">2024-12-12</td>
-                        <td class="status"><span class="answered">답변완료</span></td>
-                    </tr>
-                    <tr class="answerRow">
-                        <td colspan="6">
-                            <div class="question">
-                                <p class="tit">
-                                    흰색 상품은 없나요?
-                                    <span class="date">2022-12-16 10:08:25</span>
-                                </p>
-                                <p class="content">
-                                    흰색 살래요~
-                                </p>
-                            </div>
-                            <div class="answer">
-                                <p class="tit">
-                                    상품 문의 답변입니다.
-                                    <span class="date">2022-12-17 10:08:25</span>
-                                </p>
-                                <p class="content">
-                                    네 없어요.
-                                </p>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="no">1</td>
-                        <td class="channel">판매자게시판</td>
-                        <td class="type">반품</td>
-                        <td class="tit">
-                            <ul>
-                                <li class="prodName"><a href="#">상품명</a></li>
-                                <li class="question"><a href="#">사이즈가 너무 작아요. 반품 요청합니다.</a></li>
-                            </ul>
-                        </td>
-                        <td class="date">2024-12-12</td>
-                        <td class="status"><span class="answered">답변완료</span></td>
-                    </tr>
-                    <tr class="answerRow">
-                        <td colspan="6">
-                            <div class="question">
-                                <p class="tit">
-                                    사이즈가 너무 작아요. 반품 요청합니다.
-                                    <span class="date">2022-12-16 10:08:25</span>
-                                </p>
-                                <p class="content">
-                                    반품 해주세요.
-                                </p>
-                            </div>
-                            <div class="answer">
-                                <p class="tit">
-                                    반품 문의 답변입니다.
-                                    <span class="date">2022-12-17 10:08:25</span>
-                                </p>
-                                <p class="content">
-                                    반품 안돼요.
-                                </p>
-                            </div>
-                        </td>
-                    </tr>
+
+
+                    <th:block th:each="list:${myQna}">
+                        <tr>
+                            <td class="no">4</td>
+                            <td class="channel"><!--[[${list.group == 'seller' ? '판매자 게시판' : '고객센터'}]]--></td>
+                            <td class="type">주문/결제</td>
+                            <td class="tit">
+
+                                <!--고객센터의 경우-->
+                                <a href="#">신용카드 결제 중 오류가 난 경우 어떻게 하나요?</a></td>
+
+                                <!--판매자 게시판 경우-->
+                                <ul>
+                                    <li class="prodName"><a href="#">상품명</a></li>
+                                    <li class="question"><a href="#">사이즈가 너무 작아요. 반품 요청합니다.</a></li>
+                                </ul>
+
+                            <td class="date">2024-12-12</td>
+                            <td class="status"><span class="answered">답변완료</span></td>
+                        </tr>
+
+                        <tr class="answerRow" >
+                            <td colspan="6">
+                                <div class="question">
+                                    <p class="tit">
+                                        사이즈가 너무 작아요. 반품 요청합니다.
+                                        <span class="date">2022-12-16 10:08:25</span>
+                                    </p>
+                                    <p class="content">
+                                        반품 해주세요.
+                                    </p>
+                                </div>
+                                <div class="answer">
+                                    <p class="tit">
+                                        반품 문의 답변입니다.
+                                        <span class="date">2022-12-17 10:08:25</span>
+                                    </p>
+                                    <p class="content">
+                                        반품 안돼요.
+                                    </p>
+                                </div>
+                            </td>
+                        </tr>
+                    </th:block>
                 </table>
 
-                <p class="page">
-                    <a href="#" class="prev">이전</a>
-                    <a href="#" class="num on">1</a>
-                    <a href="#" class="num">2</a>
-                    <a href="#" class="num">3</a>
-                    <a href="#" class="next">다음</a>
+                <p class="page" th:if="${myQna.total > 0}">
+
+                    <a class="prev"
+                       th:href="@{/my/qna(pg=${myQna.start-1})}"
+                       th:if="${myQna.prev}">
+                        이전
+                    </a>
+
+                    <a th:classappend="${myQna.pg eq num ? 'num on' : 'num'}"
+                       th:each="num:${#numbers.sequence(myQna.start, myQna.end)}"
+                       th:href="@{/my/qna(pg=${num})}">
+                        [[${num}]]
+                    </a>
+
+                    <a class="next"
+                       th:href="@{/my/qna(pg=${myQna.end+1})}"
+                       th:if="${myQna.next}">
+                        다음
+                    </a>
                 </p>
             </article>
         </section>
