--- a/src/main/resources/templates/policy/location.html
+++ b/src/main/resources/templates/policy/location.html
@@ -1,205 +1,26 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>구매회원 약관</title>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"/>
-    <link rel="stylesheet" th:href="@{/css/common.css}" />
-    <link rel="stylesheet" th:href="@{/css/policy.css}" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>    
-</head>
-<body>
-    <div id="wrapper">
-        <header>
-          <div class="top">
-            <div>
-                <a href="#">로그인</a>
-                <a href="#">회원가입</a>
-                <a href="#">마이페이지</a>
-                <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-            </div>
-        </div>
-        <div class="logo">
-            <div>
-                <a href="#"><img th:src="@{/images/header_logo.png}" alt="로고" /></a>
-                <form action="#">
-                    <input type="text" name="search"/>
-                    <button><i class="fa fa-search"></i></button>
-                </form>                
-            </div>            
-        </div>
-            <div class="menu">
-                <div>
-                    <ul>
-                        <li><a href="#">히트상품</a></li>
-                        <li><a href="#">추천상품</a></li>
-                        <li><a href="#">최신상품</a></li>
-                        <li><a href="#">인기상품</a></li>
-                        <li><a href="#">할인상품</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="#">공지사항</a></li>
-                        <li><a href="#">자주묻는질문</a></li>
-                        <li><a href="#">문의하기</a></li>
-                        <li><a href="#">고객센터</a></li>
-                    </ul>
-                </div>
-            </div>
-        </header>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/fragments/policy/policy_layout.html}">
 
-        <main id="termsPolicy">
-            <aside>
-                <!-- 카테고리 -->
-                <ul class="category">
-                  <li><i class="fa fa-bars" aria-hidden="true"></i>카테고리</li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-tshirt"></i>패션·의류·뷰티<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">남성의류</a></li>
-                      <li><a href="#">여성의류</a></li>
-                      <li><a href="#">잡화</a></li>
-                      <li><a href="#">뷰티</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-laptop"></i>가전·디지털<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">노트북/PC</a></li>
-                      <li><a href="#">가전</a></li>
-                      <li><a href="#">휴대폰</a></li>
-                      <li><a href="#">기타</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-utensils"></i>식품·생필품<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">신선식품</a></li>
-                      <li><a href="#">가공식품</a></li>
-                      <li><a href="#">건강식품</a></li>
-                      <li><a href="#">생필품</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-home"></i>홈·문구·취미<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">가구/DIY</a></li>
-                      <li><a href="#">침구·커튼</a></li>
-                      <li><a href="#">생활용품</a></li>
-                      <li><a href="#">사무용품</a></li>
-                    </ol>
-                  </li>
-                </ul>
-            </aside>
-            
-            <section class="buyer">
-                <nav>
-                  <h1>LotteON 서비스 이용약관</h1>
-                  <ul>
-                    <li><a href="buyer.html">구매회원 약관</a></li>
-                    <li><a href="seller.html">판매회원 약관</a></li>
-                    <li><a href="finance.html">전자금융거래 약관</a></li>
-                    <li class="on"><a href="location.html">위치정보이용 약관</a></li>
-                    <li><a href="privacy.html">개인정보수집 방침</a></li>
-                  </ul>
-                </nav>
-                <article>
-                  <h2>위치정보 이용약관</h2>
-                  <p>
-                    <span class="tit">제1조(목적)</span>
-                    <span class="content">이 약관은 주식회사 롯데ON(이하 “회사”라 함)가 운영하는 “K마켓” 인터넷 오픈마켓 사이트 (www.gmarket.co.kr, 이하 “K마켓”이라 함)와 스마트폰 등 이동통신기기를 통해 제공되는 ‘K마켓’ 모바일 애플리케이션(이하 “모바일K마켓”이라고 합니다)을 통해서 제공하는 전자상거래 관련 서비스 및 기타 서비스 (이하 “서비스”라 함)를 이용하는 자간의 권리, 의무를 확정하고 이를 이행함으로써 상호 발전을 도모하는 것을 그 목적으로 합니다.</span>
-                  </p>
-                  <p>
-                    <span class="tit">제2조(약관의 명시, 효력과 개정)</span>
-                    <span class="content">
-                      1. 회사는 이 약관의 내용을 회사의 상호, 영업소 소재지, 대표자의 성명, 사업자등록번호, 연락처(전화, 팩스, 전자우편주소 등)등과 함께 회원이 확인할 수 있도록 “K마켓” 초기 서비스화면 또는 연결화면에 게시합니다.<br>
-                      2. 회사는 약관의규제에관한법률, 전자문서 및 전자거래기본법, 전자서명법, 정보통신망이용촉진및정보보호등에관한법률, 전자상거래등에서의소비자보호에관한법률, 전자금융거래법 등 관련법을 위배하지 않는 범위에서 본 약관을 개정할 수 있습니다.<br>
-                      3. 회사가 약관을 개정할 경우에는 적용일자 및 개정사유를 명시하여 현행 약관과 함께 초기화면에 그 적용일자 14일 이전부터 적용일자 전일까지 공지합니다.다만, 변경 내용이 중대하거나 구매회원에게 불리한 경우에는 그 적용일자 30일 이전부터 적용일자 전일까지 공지하고 구매회원에게 개별 통지합니다.변경된 약관은 그 적용일자 이전으로 소급하여 적용되지 아니합니다.<br>
-                    </span>
-                  </p>                  
-                  <p>
-                    <span class="tit">제3조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제4조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제5조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제6조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제7조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제8조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제9조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제10조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                </article>
-            </section>
+<section class="buyer" layout:fragment="content">
+    <nav>
+        <h1>LotteON 서비스 이용약관</h1>
+        <ul>
+            <li><a th:href="@{/buyer}">구매회원 약관</a></li>
+            <li><a th:href="@{/policy/seller}">판매회원 약관</a></li>
+            <li><a th:href="@{/policy/finance}">전자금융거래 약관</a></li>
+            <li class="on"><a th:href="@{/policy/location}">위치정보이용 약관</a></li>
+            <li><a th:href="@{/policy/privacy}">개인정보수집 방침</a></li>
+        </ul>
+    </nav>
+    <article class="selectPolicy">
+        <h2>구매회원 이용약관</h2>
+        <p th:each="terms:${selectPolicy}">
+            <span class="tit">제1조(목적)</span>
+            <span class="content" th:text="${terms.location}"></span>
+        </p>
+    </article>
+</section>
 
-        </main>
 
-        <footer>
-          <ul>
-            <li><a href="#">회사소개</a></li>
-            <li><a href="#">서비스이용약관</a></li>
-            <li><a href="#">개인정보처리방침</a></li>
-            <li><a href="#">전자금융거래약관</a></li>
-          </ul>
-          <div>
-              <p><img src="@{/images/footer_logo.png}" alt="로고" /></p>
-            <p>
-              <strong>(주)롯데ON</strong><br />
-              서울특별시 송파구 올림픽로 300 롯데월드타워 26층 (역삼동 강남파이낸스센터)<br />
-              대표이사 : 김사무엘상현, 정준호, 강성현<br />
-              사업자등록번호 : 529-85-00774(롯데쇼핑(주) e커머스사업부)<br />
-              통신판매업 신고 : 서울송파 제0158호<br>
-              호스팅 서비스사업자 : 롯데쇼핑(주) e커머스사업부
-            </p>
-            <p>
-              <strong>고객센터</strong><br />
-              Tel : 1899-7000(유료) (평일 09:00~18:00)<br />
-              Fax : 051-123-4567 | E-mail : lotteon@lotte.net<br />
-            </p>
-          </div>
-        </footer>
-    </div>
-</body>
 </html>
