--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -73,8 +73,8 @@
         <div class="logo">
           <div>
             <a th:href="@{/}"><img th:src="@{/images/header_logo.png}" alt="로고" /></a>
-            <form action="#">
-              <input type="text" name="search" />
+            <form th:action="@{/product/search}" method="get">
+              <input type="text" name="keyword"/>
               <button><i class="fa fa-search"></i></button>
             </form>
           </div>
