--- a/src/main/resources/templates/product/search.html
+++ b/src/main/resources/templates/product/search.html
@@ -2,11 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/product/product_layout.html}">
+<head>
+  <script th:src="@{/js/product/product_search.js}"></script>
+</head>
 <section layout:fragment="content" class="search">
         
         <!-- 상품검색 화면 시작 -->
           <!-- 제목, 페이지 네비게이션 -->
-          <nav>
+          <nav class="searchNav">
             <h1>상품 검색 결과</h1>
             <p>
               HOME > <span>상품검색</span> > <strong>검색키워드</strong>
@@ -15,10 +18,10 @@
 
           <!-- 검색결과 그룹박스 -->
           <div class="group">
-            <h3><strong>셔츠</strong>검색결과 <em>(총&nbsp;:&nbsp;<span>20</span>&nbsp;건)</em></h3>
-            <form action="#">
-              <input type="text" name="search"/>
-              <input type="submit" value="검색"/>
+            <h3><strong th:text="${pageRequestDTO.keyword}"></strong>검색결과 <em>(총&nbsp;:&nbsp;<span th:text="${products.total}">20</span>&nbsp;건)</em></h3>
+            <form action="#" id="searchDetail">
+              <input type="text" name="search" class="searchDetail"/>
+              <input type="button" value="검색"/>
               <span>
                   <label><input type="checkbox" name="chk" value="상품명">상품명</label>
                   <label><input type="checkbox" name="chk" value="상품설명">상품설명</label>
@@ -43,72 +46,50 @@
           </ul>
 
           <!-- 검색목록 -->
-          <table border="0">                  
-            <tr>
-              <td><a href="#" class="thumb"><img src="https://via.placeholder.com/120x120" alt="상품이미지"/></a></td>
+          <table border="0">
+            <input type="hidden" id="keyword" th:value="${keyword}"/>
+            <input type="hidden" id="path" th:value="${path}"/>
+            <tr th:each="product:${products.dtoList}">
+              <td><a th:href="@{/product/view(prodCate1=${product.prodCate1.cate1},prodCate2=${product.prodCate2},prodNo=${product.prodNo})}" class="thumb"><img th:src="@{/thumbs/}+${product.prodCate1.cate1} +'/'+ ${product.prodCate2} + '/' + ${product.thumb1}" alt="상품이미지"/></a></td>
               <td>
-                <h3 class="name">상품명</h3>
-                <a href="#" class="desc">상품 설명</a>
+                <a th:href="@{/product/view(prodCate1=${product.prodCate1.cate1},prodCate2=${product.prodCate2},prodNo=${product.prodNo})}"><h3 class="name" th:text="${product.prodName}">상품명</h3></a>
+                <a th:href="@{/product/view(prodCate1=${product.prodCate1.cate1},prodCate2=${product.prodCate2},prodNo=${product.prodNo})}" class="desc" th:text="${product.descript}">상품 설명</a>
               </td>
               <td>
                 <ul>
-                  <li><ins class="dis-price">27,000</ins></li>
+                  <li><ins class="dis-price" th:text="${#numbers.formatInteger(product.discountingPrice, 0, 'COMMA')}">27,000</ins></li>
                   <li>
-                    <del class="org-price">30,000</del>
-                    <span class="discount">10%</span>
+                    <del class="org-price" th:if="${product.discount ne 0}" th:text="${#numbers.formatInteger(product.price, 0, 'COMMA')}">30,000</del>
+                    <span class="discount" th:if="${product.discount ne 0}">[[${product.discount}]]%</span>
                   </li>
-                  <li><span class="free-delivery">무료배송</span></li>
+                  <li><span th:class="${product.delivery eq 0 ? 'free-delivery' : 'delivery'}"  th:text="'배송비 '+${#numbers.formatInteger(product.delivery, 0, 'COMMA')}+'원'">무료배송</span></li>
                 </ul>
               </td>
               <td>
-                <h4 class="seller"><i class="fas fa-home"></i>&nbsp;판매자</h4>
-                <h5 class="badge power great">판매자등급</h5>
-                <h6 class="rating star3">상품평</h6>
+                <h4 class="seller"><i class="fas fa-home"></i>&nbsp;[[${product.seller.company}]]</h4>
+                <h5 th:class="'badge '+${product.seller.level eq 4 ? 'power':(product.seller.level eq 5?'great':(product.seller.level eq 6 ?'power great':''))}">판매자등급</h5>
+                <h6 th:class="'rating star'+${product.score}">상품평[[${product.score eq 0 ? '이 없습니다.': ' '}]]</h6>
               </td>
             </tr>
-            <tr>
-              <td><a href="#" class="thumb"><img src="https://via.placeholder.com/120x120" alt="상품이미지"/></a></td>
-              <td>
-                <h3 class="name">상품명</h3>
-                <a href="#" class="desc">상품 설명</a>
-              </td>
-              <td>
-                <ul>
-                  <li><ins class="dis-price">27,000</ins></li>
-                  <li>
-                    <del class="org-price">30,000</del>
-                    <span class="discount">10%</span>
-                  </li>
-                  <li><span class="free-delivery">무료배송</span></li>
-                </ul>
-              </td>
-              <td>
-                <h4 class="seller"><i class="fas fa-home"></i>&nbsp;판매자</h4>
-                <h5 class="badge power great">판매자등급</h5>
-                <h6 class="rating star3">상품평</h6>
-              </td>
-            </tr>
+
           </table>
 
           <!-- 상품목록 페이지번호 -->
-          <div class="paging">
-            <span class="prev">
-              <a href="#"><&nbsp;이전</a>
-            </span>
+          <div class="paging" th:if="${not #lists.isEmpty(products.dtoList)}">
+                        <span>
+                          <a th:href="@{/product/search(keyword=${products.keyword}, type=${pageRequestDTO.type}, pg=${products.start-1})}"
+                             class="prev" th:if="${products.prev}"><&nbsp;이전</a>
+                        </span>
             <span class="num">
-              <a href="#" class="on">1</a>
-              <a href="#">2</a>
-              <a href="#">3</a>
-              <a href="#">4</a>
-              <a href="#">5</a>
-              <a href="#">6</a>
-              <a href="#">7</a>
-            </span>
-            <span class="next">
-              <a href="#">다음&nbsp;></a>
-            </span>
+                            <th:block th:each="num:${#numbers.sequence(products.start, products.end)}">
+                          <a th:href="@{/product/search(keyword=${pageRequestDTO.keyword}, type=${pageRequestDTO.type}, pg=${num})}" class="on"  th:classappend="${products.pg eq num ? 'num on' : 'num'}">[[${num}]]</a>
+                            </th:block>
+                        </span>
+            <span>
+                          <a th:href="@{/product/search(keyword=${pageRequestDTO.keyword}, type=${pageRequestDTO.type}, pg=${products.end+1})}"
+                             class="next" th:if="${products.next}">다음&nbsp;></a>
+                        </span>
           </div>
-          
         </section>
         <!-- 상품검색 화면 끝 -->
 </html>
