--- a/src/main/resources/templates/product/search.html
+++ b/src/main/resources/templates/product/search.html
@@ -37,12 +37,12 @@
 
           <!-- 정렬 메뉴 -->
           <ul class="sort">
-              <li><a href="#">판매많은순</a></li>
-              <li><a href="#">낮은가격순</a></li>
-              <li><a href="#">높은가격순</a></li>
-              <li><a href="#">평점높은순</a></li>
-              <li><a href="#">후기많은순</a></li>
-              <li><a href="#">최근등록순</a></li>
+              <li><a th:href="@{/product/search(keyword=${pageRequestDTO.keyword}, prodCate1=${pageRequestDTO.prodCate1}, type='sold')}" th:class="${pageRequestDTO.type eq 'sold' ? 'on' : 'off'}">판매많은순</a></li>
+              <li><a th:href="@{/product/search(keyword=${pageRequestDTO.keyword}, prodCate1=${pageRequestDTO.prodCate1}, type='priceAsc')}" th:class="${pageRequestDTO.type eq 'priceAsc' ? 'on' : 'off'}">낮은가격순</a></li>
+              <li><a th:href="@{/product/search(keyword=${pageRequestDTO.keyword}, prodCate1=${pageRequestDTO.prodCate1}, type='priceDesc')}" th:class="${pageRequestDTO.type eq 'priceDesc' ? 'on' : 'off'}">높은가격순</a></li>
+              <li><a th:href="@{/product/search(keyword=${pageRequestDTO.keyword}, prodCate1=${pageRequestDTO.prodCate1}, type='score')}" th:class="${pageRequestDTO.type eq 'score' ? 'on' : 'off'}">평점높은순</a></li>
+              <li><a th:href="@{/product/search(keyword=${pageRequestDTO.keyword}, prodCate1=${pageRequestDTO.prodCate1}, type='review')}" th:class="${pageRequestDTO.type eq 'review' ? 'on' : 'off'}">후기많은순</a></li>
+              <li><a th:href="@{/product/search(keyword=${pageRequestDTO.keyword}, prodCate1=${pageRequestDTO.prodCate1}, type='rdate')}" th:class="${pageRequestDTO.type eq 'rdate' ? 'on' : 'off'}">최근등록순</a></li>
           </ul>
 
           <!-- 검색목록 -->
