--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,9 +4,9 @@
 <footer th:fragment="footer">
     <ul>
         <li><a href="#">회사소개</a></li>
-        <li><a href="#">서비스이용약관</a></li>
-        <li><a href="#">개인정보처리방침</a></li>
-        <li><a href="#">전자금융거래약관</a></li>
+        <li><a th:href="@{/policy/buyer}">서비스이용약관</a></li>
+        <li><a th:href="@{/policy/privacy}">개인정보처리방침</a></li>
+        <li><a th:href="@{/policy/finance}">전자금융거래약관</a></li>
     </ul>
     <div>
         <p><img th:src="@{/images/footer_logo.png}" alt="로고" /></p>
