--- a/src/main/resources/templates/policy/seller.html
+++ b/src/main/resources/templates/policy/seller.html
@@ -6,7 +6,7 @@
     <nav>
         <h1>LotteON 서비스 이용약관</h1>
         <ul>
-            <li><a th:href="@{/buyer}">구매회원 약관</a></li>
+            <li><a th:href="@{/policy/buyer}">구매회원 약관</a></li>
             <li class="on"><a th:href="@{/policy/seller}">판매회원 약관</a></li>
             <li><a th:href="@{/policy/finance}">전자금융거래 약관</a></li>
             <li><a th:href="@{/policy/location}">위치정보이용 약관</a></li>
@@ -15,9 +15,9 @@
     </nav>
     <article class="selectPolicy">
         <h2>구매회원 이용약관</h2>
-            <p th:each="terms:${selectPolicy}">
+            <p th:each="terms:${selectPolicy}" th:if="${terms.tit ne null}">
                 <span class="tit" th:text="${terms.tit}"></span>
-                <span class="content" th:text="${terms.content}"></span>
+                <span class="content" th:utext="${terms.policyContent}"></span>
             </p>
     </article>
 </section>
