--- a/src/main/resources/templates/member/register.html
+++ b/src/main/resources/templates/member/register.html
@@ -59,10 +59,11 @@
 								</td>
 							</tr>
 							<tr>
-								<th><span class="essential">*</span>주민번호</th>
+								<th><span class="essential">*</span>생년월일</th>
 								<td>
 									<input type="text" name="km_birth" placeholder="생년월일 입력" th:maxlength="8" th:field="*{birth}"/>
-									<span class="msgbirth"> 기호없이 입력 예) 19990101</span>
+									<span class="msgbirth"> 기호없이 입력 예) 19990101</span> <br>
+									<span class="msgbirth1"></span>
 								</td>
 							</tr>
 							<tr>
