--- a/src/main/resources/templates/fragments/my/my_layout.html
+++ b/src/main/resources/templates/fragments/my/my_layout.html
@@ -17,13 +17,8 @@
     <body>
         <div id="wrapper">
             <header>
-                <div class="top">
-                    <div>
-                        <a th:href="@{/member/login}">로그인</a>
-                        <a th:href="@{/member/join}">회원가입</a>
-                        <a th:href="@{/my/home}">마이페이지</a>
-                        <a th:href="@{/product/cart}"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-                    </div>
+                <div class="top" th:replace="~{/fragments/loginBar}">
+
                 </div>
                 <div class="logo">
                     <div>
