--- a/src/main/resources/templates/my/info.html
+++ b/src/main/resources/templates/my/info.html
@@ -36,9 +36,9 @@
                     <tr>
                         <td>E-mail</td>
                         <td>
-                            <input type="text" name="email1">@
-                            <input type="text" name="email2">
-                                <select class="emailDomain">
+                            <input type="text" name="email1" readonly>@
+                            <input type="text" name="email2" readonly>
+                                <select class="emailDomain" disabled>
                                     <option>직접입력</option>
                                     <option>naver.com</option>
                                     <option>daum.net</option>
@@ -47,16 +47,18 @@
                                     <option>outlook.com</option>
                                 </select>
                             <button id="btnChangeEmail" type="button">수정하기</button>
+                            <input type="hidden" id="myEmail" th:value="${myMember.email}">
                         </td>
                     </tr>
                     <tr>
                         <td>휴대폰</td>
                         <td>
                             <p class="hp">
-                                <input type="text" name="hp1" value="010"/>-
-                                <input type="text" name="hp2" value="1234"/>-
-                                <input type="text" name="hp3" value="1001"/>
+                                <input type="text" name="hp1" readonly th:maxlength="3"/>-
+                                <input type="text" name="hp2" readonly th:maxlength="4"/>-
+                                <input type="text" name="hp3" readonly th:maxlength="4"/>
                                 <button id="btnChangeHp">수정하기</button>
+                                <input type="hidden" id="myHp" th:value="${myMember.hp}">
                             </p>
                         </td>
                     </tr>
@@ -78,20 +80,21 @@
                         </td>
                     </tr>
                 </table>
-                <button id="btnInfoChange">수정하기</button>
+                <button type="submit" id="btnInfoChange">수정하기</button>
             </article>
         </section>
 
-        <script>
-            $(function (){
-                const email = '[[${myMember.email}]]';
-                const hp = '[[${myMember.hp}]]';
-            });
-        </script>
         <script th:src="@{/js/my/userDivision.js}"></script>
         <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
         <script th:src="@{/js/member/zipcode.js}"></script>
+        <script>
+            $(function (){
 
+
+
+
+            });
+        </script>
 
     </div>
 </html>
