--- a/src/main/resources/templates/my/qna.html
+++ b/src/main/resources/templates/my/qna.html
@@ -2,6 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/my/my_layout.html}">
+<head>
+    <script th:src="@{/js/my/qnaShow.js}"></script>
+</head>
     <div class="qna" layout:fragment="content">
         <ul th:replace="~{/fragments/my/my_aside.html}">
             <!--
@@ -11,6 +14,7 @@
         <head>
             <script th:src="@{/js/my/qnaShow.js}"></script>
         </head>
+        <input type="hidden" class="path" th:value="${path}">
 
         <section>
             <a href="#"><img th:src="@{/images/my/my_banner2.png}" alt="패션, 타운 하나로 끝" class="banner"></a>
@@ -29,11 +33,15 @@
 
 
                     <th:block th:each="list, num:${myQna.csList}">
-                        <tr>
+                        <tr th:classappend="${list.comment eq 0 ? 'none' : 'off'}">
                             <td class="no">[[${myQna.total - ((myQna.pg - 1) * myQna.size) - num.index}]]</td>
                             <td class="channel">[[${list.group.group == 'seller' ? '판매자 게시판' : '고객센터'}]]</td>
                             <td class="type">[[${list.cate1.cate1_name}]]</td>
                             <td class="tit">
+                                <input name="no"       type="hidden"   th:value="${list.no}">
+                                <input name="title"    type="hidden"   th:value="${list.brTitle}">
+                                <input name="content"  type="hidden"   th:value="${list.brContent}">
+                                <input name="rdate"    type="hidden"   th:value="${list.yyyyMMddHHmmss}">
 
                                 <!--고객센터의 경우-->
                                 <a th:if="${list.group.group ne 'seller'}" href="#"
@@ -65,7 +73,7 @@
                             </td>
                         </tr>
 
-                        <tr class="answerRow" th:if="${list.comment > 0}">
+                        <!--<tr class="answerRow" th:if="${list.comment > 0}">
                             <td colspan="6">
                                 <div class="question">
                                     <p class="tit">
@@ -79,16 +87,21 @@
                                 <div class="answer">
                                     <p class="tit">
                                         반품 문의 답변입니다.
-                                        <span class="date">${list.yyyyMMddHHmmss}</span>
+                                        <span class="date">답변작성일</span>
                                     </p>
                                     <p class="content">
-                                        [[${list.answer}]]
+                                        답변
                                     </p>
                                 </div>
                             </td>
-                        </tr>
+                        </tr>-->
                     </th:block>
                 </table>
+                <div th:if="${myQna.total eq 0}"
+                     style="width: 100%; height: 150px; font-size: 14px;
+                     line-height: 150px; text-align: center;">
+                    문의 하신 내역이 없습니다.
+                </div>
 
                 <p class="page" th:if="${myQna.total > 0}">
 
