--- a/src/main/resources/templates/fragments/my/my_layout.html
+++ b/src/main/resources/templates/fragments/my/my_layout.html
@@ -202,7 +202,7 @@
                         <button class="btnClose">X</button>
                     </nav>
                     <section>
-                        <form id="qnaForm" th:action="/cs/qna(group='seller')" method="post">
+                        <form id="qnaForm" action="#" method="post">
                             <table border="0">
                                 <tr>
                                     <th>문의종류</th>
